enum-str-conv/tests/ui/compile_fail_1.rs
fn main() {
    #[derive(enum_str_conv::EnumStrConv)]
    struct MyStruct;
}
